study/istio-study/03-fault-injection/istio-api/destination-rule-ratings.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ratings
spec:
  host: ratings
  subsets:
    - name: v1
      labels:
        version: v1
