study/istio-study/03-fault-injection/istio-api/virtual-service-ratings-delay.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings-delay
spec:
  hosts:
    - ratings
  http:
    - match:
        - headers:
            end-user:
              exact: admin
      fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 4s
      route:
        - destination:
            host: ratings
            subset: v1
    - route:
      - destination:
          host: ratings
          subset: v1
